# ai-content-generator

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PROGRESS.md  README.md  SETUP.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: config.yaml.example
docs/: .gitkeep
examples/: .gitkeep  01_basic_usage.py  02_session_usage.py  03_with_addons.py  04_model_discovery.py  05_whitespace_minimizer.py  README.md
src/ai_content_generator/: __init__.py
src/ai_content_generator/addons/: __init__.py  addon_manager.py  base_addon.py  cache.py  dry_run.py  response_validator.py  retry.py  whitespace_minimizer.py
src/ai_content_generator/core/: __init__.py  config.py  exceptions.py  factory.py  provider.py  session.py
src/ai_content_generator/logging/: __init__.py  composite_logger.py  console_logger.py  file_logger.py  logger_factory.py  logger_interface.py
src/ai_content_generator/monitoring/: __init__.py  alerts.py  cost_tracker.py  token_monitor.py
src/ai_content_generator/providers/: __init__.py  anthropic_provider.py  openai_provider.py
src/ai_content_generator/utils/: __init__.py  helpers.py
src/ai_content_generator/validators/: __init__.py  api_key_validator.py  base_validator.py  connectivity_validator.py  model_validator.py  validator_manager.py
tests/: __init__.py  conftest.py
tests/unit/: test_monitoring.py  test_providers.py  test_validators.py  test_whitespace_minimizer.py
